--- a/templates/Index.html
+++ b/templates/Index.html
@@ -1,44 +1,54 @@
-<!DOCTYPE html>
-<html>
-<head>
-	<title>Index</title>
-	<link rel="stylesheet" href="{{ url_for('static', filename='css/estilo.css') }}">
+<!--Se hereda de la plantilla cuerpo para poder utilizarta y no
+copiar todo el codigo, se hereda tanto el esqueleto principal de html
+y los diseños css y imagenes-->
+{% extends 'plantillas/cuerpo.html'%}
 
-</head>
-<body>
-	<div id="cabezera">
-		<div id="icono">
-			<img id="imgIcon" src="{{ url_for('static', filename='imagenes/icon_blog.png') }}">
-		</div>
+{%block cuerpo %}<!--Se tiene que tener el mismo nombre para llamar el espacio-->
+<!--Todo lo que se ponga en este apartado aparecera en el cuerpo de la
+plantilla de cuerpo.html,-->
+<div id="publicaciones">
+	<div class="publicacion">
+		<a href="#"><h3>Lorem Ipsum</h3></a>
+		<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam tellus tellus, accumsan eu tincidunt
+			eget, pellentesque eu urna. Phasellus porttitor blandit neque, id facilisis velit eleifend pellentesque
+			. Sed sagittis vulputate erat sed finibus. Donec elementum sapien est, eget volutpat nibh
+			luctus eu. Mauris at semper ipsum, in blandit mi. Donec aliquet placerat scelerisque.
+		<br><br>Aliquam nec neque vitae massa rhoncus rhoncus in nec nisi. Vivamus blandit consequat
+		ipsum consectetur rhoncus. Pellentesqeu sem ante, commodo sed risus ut, ullamcorper viverra erat.
+		 Maecenas libero sem, lacinia eu libero eget, dictum viverra nisl. Mauris venenatis orci et euismod congue
+		 . Nunc posuere leo non massa cursus, at sodales est semper.
+	 </p>
 	</div>
 
-	<div id="contenedor">
-		<div id="publicaciones">
-			<div class="publicacion">
-				<a href="#"><h3>Lorem Ipsum</h3></a>
-				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam tellus tellus, accumsan eu tincidunt eget, pellentesque eu urna. Phasellus porttitor blandit neque, id facilisis velit eleifend pellentesque. Sed sagittis vulputate erat sed finibus. Donec elementum sapien est, eget volutpat nibh luctus eu. Mauris at semper ipsum, in blandit mi. Donec aliquet placerat scelerisque.
-				<br><br>Aliquam nec neque vitae massa rhoncus rhoncus in nec nisi. Vivamus blandit consequat ipsum consectetur rhoncus. Pellentesque sem ante, commodo sed risus ut, ullamcorper viverra erat. Maecenas libero sem, lacinia eu libero eget, dictum viverra nisl. Mauris venenatis orci et euismod congue. Nunc posuere leo non massa cursus, at sodales est semper.
-				</p>
-			</div>
-
-			<div class="publicacion">
-				<a href="#"><h3>Dolor sit AMET</h3></a>
-				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam tellus tellus, accumsan eu tincidunt eget, pellentesque eu urna. Phasellus porttitor blandit neque, id facilisis velit eleifend pellentesque. Sed sagittis vulputate erat sed finibus. Donec elementum sapien est, eget volutpat nibh luctus eu. Mauris at semper ipsum, in blandit mi. Donec aliquet placerat scelerisque.
-				<br><br>Aliquam nec neque vitae massa rhoncus rhoncus in nec nisi. Vivamus blandit consequat ipsum consectetur rhoncus. Pellentesque sem ante, commodo sed risus ut, ullamcorper viverra erat. Maecenas libero sem, lacinia eu libero eget, dictum viverra nisl. Mauris venenatis orci et euismod congue. Nunc posuere leo non massa cursus, at sodales est semper.
-				</p>
-			</div>
-
-			<div class="publicacion">
-				<a href="#"><h3>Consectetur adipiscing Elit.</h3></a>
-				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam tellus tellus, accumsan eu tincidunt eget, pellentesque eu urna. Phasellus porttitor blandit neque, id facilisis velit eleifend pellentesque. Sed sagittis vulputate erat sed finibus. Donec elementum sapien est, eget volutpat nibh luctus eu. Mauris at semper ipsum, in blandit mi. Donec aliquet placerat scelerisque.
-				<br><br>Aliquam nec neque vitae massa rhoncus rhoncus in nec nisi. Vivamus blandit consequat ipsum consectetur rhoncus. Pellentesque sem ante, commodo sed risus ut, ullamcorper viverra erat. Maecenas libero sem, lacinia eu libero eget, dictum viverra nisl. Mauris venenatis orci et euismod congue. Nunc posuere leo non massa cursus, at sodales est semper.
-				</p>
-			</div>
-		</div>
-
-		<div id="cajasInformacion">
-
-		</div>
+	<div class="publicacion">
+		<a href="#"><h3>Dolor sit AMET</h3></a>
+		<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam tellus tellus, accumsan eu tincidunt eget,
+			pellentesque eu urna. Phasellus porttitor blandit neque, id facilisis velit eleifend pellentesque.
+			Sed sagittis vulputate erat sed finibus. Donec elementum sapien est, eget volutpat nibh luctus eu.
+			 Mauris at semper ipsum, in blandit mi. Donec aliquet placerat scelerisque.
+		<br><br>Aliquam nec neque vitae massa rhoncus rhoncus in nec nisi. Vivamus blandit consequat ipsum
+		consectetur rhoncus. Pellentesque sem ante, commodo sed risus ut, ullamcorper viverra erat.
+		Maecenas libero sem, lacinia eu libero eget, dictum viverra nisl. Mauris venenatis orci et
+		euismod congue. Nunc posuere leo non massa cursus, at sodales est semper.
+		</p>
 	</div>
-</body>
-</html>
+
+	<div class="publicacion">
+		<a href="#"><h3>Consectetur adipiscing Elit.</h3></a>
+		<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam tellus tellus, accumsan eu tincidunt
+			eget, pellentesque eu urna. Phasellus porttitor blandit neque, id facilisis velit eleifend pellentesque.
+			Sed sagittis vulputate erat sed finibus. Donec elementum sapien est, eget volutpat nibh luctus eu.
+			Mauris at semper ipsum, in blandit mi. Donec aliquet placerat scelerisque.
+		<br><br>Aliquam nec neque vitae massa rhoncus rhoncus in nec nisi. Vivamus blandit consequat ipsum
+		consectetur rhoncus. Pellentesque sem ante, commodo sed risus ut, ullamcorper viverra erat.
+		Maecenas libero sem, lacinia eu libero eget, dictum viverra nisl. Mauris venenatis orci et euismod congue.
+		Nunc posuere leo non massa cursus, at sodales est semper.
+		</p>
+	</div>
+</div>
+
+<div id="cajasInformacion">
+
+</div>
+
+{%endblock%}
