--- a/templates/Index.html
+++ b/templates/Index.html
@@ -51,4 +51,9 @@ plantilla de cuerpo.html,-->
 
 </div>
 
+<div id="pie">
+	<img id="imgIconFooter" src="{{ url_for('static', filename='imagenes/Footer.png') }}">
+	<p>© StreetCode 2017</p>
+</div>
+
 {%endblock%}
