--- a/templates/Publicacion.html
+++ b/templates/Publicacion.html
@@ -12,28 +12,31 @@
 	
 	<div id="contenidoComment">
 		<form>
+			<table>
+				<tr>
+					<td>
+						<textarea>
+							
+						</textarea>
+					</td>
 
-		<table>
-			<tr>
-				<td>
-					<textarea>
-						
-					</textarea>
-				</td>
-
-				<td>
-					<button>
-						Enviar
-					</button>
-				</td>
-			</tr>
-		</table>
-			
+					<td>
+						<button>
+							Enviar
+						</button>
+					</td>
+				</tr>
+			</table>
 		</form>
 	</div>
 
 	<div id="comments">
 		
+	</div>
+
+	<div id="pie">
+		<img id="imgIconFooter" src="{{ url_for('static', filename='imagenes/Footer.png') }}">
+		<p>© StreetCode 2017</p>
 	</div>
 </div>
 
