--- a/static/css/cuerpo.css
+++ b/static/css/cuerpo.css
@@ -7,14 +7,15 @@
 body, html {
 	background-color: #FAFAFA;
 	height: 100%;
+
 }
 
 #cabezera{
 	width:100%;
-	height: 50px;  
-	border: 0px solid #ccc; 
-	top: 0px; 
-	left: 0px; 
+	height: 50px;
+	border: 0px solid #ccc;
+	top: 0px;
+	left: 0px;
 	position: fixed;
 	background-color: #DF0606;
 	box-shadow: 2px 2px 5px #999;
@@ -61,14 +62,13 @@ borde (para comprobar)*/
 	margin: 0 auto;
 	margin-top: 100px;
 	//border: 0.2px solid #ccc;
-
 	padding: 1px;
 }
 
 	#publicaciones{
-		float: left;	
+		float: left;
 		width: 600px;
-		//border:0.2px solid #ccc;
+		border:0.2px solid #ccc;
 		padding: 20px;
 
 		margin-bottom: 50px;
@@ -100,7 +100,7 @@ borde (para comprobar)*/
 			.publicacion p{
 				text-align: justify;
 				font-size: 14px;
-				font-family: Arial
+				font-family: Arial;
 				}
 
 	#cajasInformacion{
@@ -110,9 +110,11 @@ borde (para comprobar)*/
 		border: 0.2px solid #ccc;
 		margin-top: 20px;
 		margin-bottom: 10px;
-
 		background-color: #fff;
+    text-align: center;
 	}
+
+
 
 /*ESTRUCTURA DEL AREA DE PUBLICAION COMPLETA*/
 #contenidoTotal{
@@ -199,7 +201,7 @@ borde (para comprobar)*/
     height:80px;
     text-align: center;
 }
-	
+
 	#footer p {
 		color: gray;
 		margin: 0 auto;
@@ -216,7 +218,7 @@ borde (para comprobar)*/
     text-align: center;
     position: relative;
 }
-	
+
 	footer p {
 		color: gray;
 		margin: 0 auto;
