--- a/static/css/cuerpo.css
+++ b/static/css/cuerpo.css
@@ -68,12 +68,12 @@ borde (para comprobar)*/
 	#publicaciones{
 		float: left;
 		width: 600px;
-		border:0.2px solid #ccc;
+		//border:0.2px solid #ccc;
 		padding: 20px;
 
 		margin-bottom: 50px;
 	}
-
+/*
 		.publicacion{
 			float: left;
 			background-color: #fff;
@@ -113,12 +113,13 @@ borde (para comprobar)*/
 		background-color: #fff;
     text-align: center;
 	}
+*/
 
 
 
 /*ESTRUCTURA DEL AREA DE PUBLICAION COMPLETA*/
 #contenidoTotal{
-	float: left;
+	//float: left;
 	width: 960px;
 	height: 500px;
 	//border: 0.2px solid #ccc;
