--- a/templates/Publicacion.html
+++ b/templates/Publicacion.html
@@ -5,10 +5,12 @@
 
 <div id="contenidoTotal">
 	<div id ="contenidoPub">
-		<h3>Titulo</h3>
+		{%for texto in resutado%}<!--Se imprime el contenido de la consulta en el metodo publlicacion con el bucle for-->
+		<h3>{{texto[1]}}</h3>
 		<p>
-			Integer et magna tellus. Donec placerat luctus nibh, ut varius magna aliquet pulvinar. Quisque ut blandit sapien, sed interdum velit. Nam efficitur nisl et metus dictum molestie. Phasellus semper ex sed arcu vestibulum, non mollis nulla viverra. Vestibulum lobortis lacinia est, interdum fermentum ante tempus vel. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc aliquam, metus ut vehicula ultricies, diam metus dictum augue, eget suscipit mauris massa eget odio. Suspendisse hendrerit posuere arcu eu mattis. Cras tempus pretium tincidunt. Maecenas fringilla tincidunt leo porttitor luctus. Integer sit amet rhoncus lorem. <br>
+		  {{texto[2]}}
 		</p>
+			{%endfor%}
 	</div>
 
 	<div id="contenidoComment">
