--- a/templates/plantillas/cuerpo.html
+++ b/templates/plantillas/cuerpo.html
@@ -16,17 +16,49 @@ asi como el contenedor principal-->
 		<div id="icono">
 			<a href="/"><img id="imgIcon" src="{{ url_for('static', filename='imagenes/icon_blog.png') }}"></a>
 		</div>
+		<div class="controles">
+		<ul id="categorias">
+      <li><b><a href="/">INICIO</a></b></li>
+			<li><b><a href="/">Programacion</a></b>
+				<ul>
+					<li><b><a href="/">C</a></b></li>
+					<li><b><a href="/">C#</a></b></li>
+					<li><b><a href="/">C++</a></b></li>
+					<li><b><a href="/">JAVA</a></b></li>
+					<li><b><a href="/">Ruby</a></b></li>
+					<li><b><a href="/">PHP</a></b></li>
+					<li><b><a href="/">Python</a></b></li>
+				</ul>
+			</li>
+			<li><b><a href="/">Sistemas operativos</a></b>
+				<ul>
+					<li><b><a href="/">GNU/Linux</a></b></li>
+					<li><b><a href="/">Windows</a></b></li>
+					<li><b><a href="/">Mac-os</a></b></li>
+				</ul>
+			</li>
+			<li><b><a href="/">Redes</a></b>
+        <ul>
+					<li><b><a href="/">Cisco</a></b></li>
+				</ul>
+			</li>
+			<li><b><a href="/">Herramientas</a></b>
+        <ul>
+					<li><b><a href="/">Editores de texto</a></b></li>
+				</ul>
+			</li>
+			<li><b><a href="/">Hardware</a></b>
+        <ul>
+        	<li><b><a href="/">Procesadores</a></b></li>
+					<li><b><a href="/">Tarjetas Madre</a></b></li>
+        </ul>
+			</li>
+		</ul>
+		</div>
 
-		<table id="navegacion">
-				<tr>
-					<td>
-						<a href="/">Incio</a>
-					</td>
-					<!--<td>
-						<a href="/publicacion">Publicacion</a>
-					</td>-->
-				</tr>
-			</table>
+
+
+
   	</div>
 	<div id="cuerpo">
 		<div id="contenedor">
