--- a/templates/plantillas/cuerpo.html
+++ b/templates/plantillas/cuerpo.html
@@ -53,9 +53,16 @@ asi como el contenedor principal-->
         </ul>
 			</li>
 		</ul>
+
 		</div>
 
-
+		<div id="usuarioDentro">
+			{% if Hola != "" %}
+				<a href="#">{{Hola}}</a>
+			{% else %}
+				<a href="#">No hay nada</a>
+			{% endif %}
+		</div>
 
 
   	</div>
