--- a/static/css/publicacion.css
+++ b/static/css/publicacion.css
@@ -67,7 +67,7 @@
 	}
 
 		.commentario{
-			border-bottom: solid 1px #ccc;
+			//border-bottom: solid 1px #ccc;
 			padding: 15px;
 			font-family: Raleway;
 		}
