Se agrego la sección de registro aun por terminar totalmente. Se terminaron algunos detalles con los links de registro e inicio de sesion.

--- a/templates/Index.html
+++ b/templates/Index.html
@@ -7,7 +7,7 @@ y los diseños css y imagenes-->
 <!--Todo lo que se ponga en este apartado aparecera en el cuerpo de la
 plantilla de cuerpo.html,-->
 <link rel="stylesheet" href="{{ url_for('static', filename='css/index.css') }}">
-<script type="text/javascript" src="{{ url_for('static', filename='js/cssrefresh.js') }}"></script>
+<!--<script type="text/javascript" src="{{ url_for('static', filename='js/cssrefresh.js') }}"></script>-->
 
 
 <div id="publicaciones">
