--- a/templates/publicar.html
+++ b/templates/publicar.html
@@ -1,7 +1,7 @@
 {% extends 'plantillas/cuerpo.html'%}
 
 {%block cuerpo %}
-<script type="text/javascript" src="{{ url_for('static', filename='js/cssrefresh.js') }}"></script>
+<!--<script type="text/javascript" src="{{ url_for('static', filename='js/cssrefresh.js') }}"></script>-->
 	<script type="text/javascript" src="{{ url_for('static', filename='ckeditor/ckeditor.js') }}"></script>
 	<link rel="stylesheet" href="{{ url_for('static', filename='css/publicar.css') }}">
 
